--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,47 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --foreground: #09090B;
+  --border-gray: #e4e4e7;
+  --text-gray:  #09090B;
+  --font-size-lg: 38px;
+  --font-size-md: 24px;
+  --font-size-sm: 16px;
+  --font-size-xs: 14px;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
+}
+
+body {
   margin: 0;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.border-rounded {
+  border-radius: 6px;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.border-gray {
+  border: 1px solid var(--border-gray);
+}
+.faded {
+  opacity: 0.3;
+}
+.text-gray {
+  color: var(--text-gray);
+}
+.circle-sm {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+}
+.circle-md {
+  width: 55px;
+  height: 55px;
+  border-radius: 100%;
+}
+.circle-lg {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
 }
