--- a/src/app/auth/authLayout.module.css
+++ b/src/app/auth/authLayout.module.css
@@ -14,7 +14,12 @@
     align-items: center;
 }
 .bannerContainer {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 10px;
+
     background-color: var(--foreground);
+    
     color: #fff;
 }
 .bannerAppTitle {
