--- a/src/app/auth/extra-data-required/registerPage.module.css
+++ b/src/app/auth/extra-data-required/registerPage.module.css
@@ -34,6 +34,13 @@
     color: var(--text-gray);
 }
 
+.form 
+{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
 .form > input 
 {
     width: 100%;
@@ -53,24 +60,27 @@
 .formRow {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 28px;
 }
 
-.formGroup {
+.formGroup 
+{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 12px;
     flex: 1;
 }
 
-.form > input {
+.form > input 
+{
     width: 100%;
     height: 64px;
     padding: 24px;
     font-size: var(--font-size-sm);
 }
 
-.formGroup > input {
+.formGroup > input 
+{
     width: 343px;
     height: 64px;
     padding: 24px;
