--- a/src/app/auth/register/register.module.css
+++ b/src/app/auth/register/register.module.css
@@ -1,8 +1,10 @@
 .formContainer {
   width: 100%;
   max-width: 480px;
+
   margin: 100px auto;
   padding: 2rem;
+
   border-radius: 10px;
 }
 
@@ -16,25 +18,27 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
+
+  font-size: var(--font-size-sm);
   font-weight: 600;
-  line-height: 24px;
-  color: #09090B;
+  line-height: var(--font-size-md);
+  color: var(--foreground);
 }
 
 .input {
   width: 100%;
   max-width: 480px;
   height: 64px;
+
   padding: 20px;      
+
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #ffffff;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
+
+  background-color: var(--background);
+  font-size: var(--font-size-sm);
   font-weight: 500;
-  color: #71717A;
+  color:var(--text-gray);
 }
 
 .inputError {
@@ -45,17 +49,20 @@
   width: 100%;
   max-width: 480px;
   height: 64px;
-  background-color: #000000;
-  color: #FAFAFA;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
+
+  padding: 20px var(--font-size-sm);
+
   border: none;
   border-radius: 8px;
-  padding: 20px 16px;
-  cursor: pointer;
+
+  background-color: var(--foreground);
+  color: #FAFAFA;
+  font-size: var(--font-size-sm);
+  font-weight: 600;
+  line-height: var(--font-size-md);
   text-align: center;
+
+  cursor: pointer;
   transition: background-color 0.2s ease;
 }
 
@@ -65,40 +72,41 @@
 }
 
 .loginHint {
-  font-family: 'Inter', sans-serif;
-  font-size: 14px;
+  max-width: 480px;
+
+  margin-top: 1rem;
+
+  font-size: var( --font-size-xs);
   font-weight: 500;
   line-height: 20px;
-  color: #71717A;
+  color: var(--text-gray);
   text-align: center;
-  margin-top: 1rem;
-  max-width: 480px;
 }
 
 .title {
-  font-family: 'Inter', sans-serif;
-  font-size: 30px;
+  margin-bottom: 0.5rem;
+
+  font-size: var(--font-size-lg);
   font-weight: 700;
   line-height: 36px;
-  color: #09090B;
-  margin-bottom: 0.5rem;
+  color: var(--foreground);
 }
 
 .subtitle {
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  color: #71717A;
   max-width: 480px;
+
   margin-bottom: 1.5rem;
+
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  line-height: var(--font-size-md);
+  color: var(--text-gray);
 }
 
 .error {
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
+  font-size: var(--font-size-sm);
   font-weight: 600;
-  line-height: 24px;
+  line-height: var(--font-size-md);
   color: #FF0000;
 }
 
@@ -124,6 +132,8 @@
 .form > input {
   width: 480px;
   height: 64px;
-  padding: 24px;
+
+  padding: var(--font-size-md);
+
   font-size: var(--font-size-sm);
 }
