--- a/src/app/auth/authLayout.module.css
+++ b/src/app/auth/authLayout.module.css
@@ -6,7 +6,7 @@
     margin: 0;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: .9fr 1fr;
 }
 .layoutContainer > * {
     display: flex;
