--- a/src/app/home/components/Sidebar.module.css
+++ b/src/app/home/components/Sidebar.module.css
@@ -1,118 +1,96 @@
 .sidebar {
-    width: 300px;
-    height: 100vh;
+  width: 300px;
+  height: 100vh;
+  border: 1px solid var(--border-gray);
+  border-radius: var(--font-size-sm);
+  background: var(--background);
+}
 
-    padding: var(--font-size-lg);
+.sidebarContent {
+  height: 100%;
+  padding: var(--font-size-lg);
+  display: flex;
+  flex-direction: column;
+}
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.topSection {
+  flex-grow: 1;
+}
 
-    border: 1px solid var(--border-gray);
-    border-radius: var(--font-size-sm);
-  
-    background: var(--background);
-  }
-  
-  .title {
-    margin-bottom: 20px;
+.title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+}
 
-    font-weight: bold;
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    text-align: center;
-  }
+.separator{
+  width: 100%;
+  height: 32px;
+  margin-bottom: var(--font-size-sm); 
+  border: none;
+  border-top: 1px solid var(--border-gray);
+}
 
-  .separator{
-    width: 260px;
-    height: 32px;
+.nav {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-    margin-bottom: var(--font-size-sm); 
+.navItem {
+  padding: 12px var(--font-size-sm);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  border-radius: 10px;
+  color: #bcbcbc;
+  text-decoration: none;
+  font-weight: 400;
+  user-select: none;
+}
 
-    border: none;
-    border-top: 1px solid var(--border-gray);
-  }
-  
-  .nav {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-  
-  .navItem {
-    padding: 12px var(--font-size-sm);
+.active {
+  background-color: var(--foreground);
+  color: var(--background);
+}
 
-    display: flex;
-    align-items: center;
-    gap: 8px;
+.inactive {
+  opacity: 0.3;
+}
 
-    border-radius: 10px;
+.userBox {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid var(--border-gray);
+  border-radius: 12px;
+}
 
-    color: #bcbcbc;
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
+.avatar {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #000;
+  color: var(--background);
+  font-weight: bold;
+}
 
-    user-select: none;
-  }
-  
-  .active {
-    background-color: var(--foreground);
-    color: var(--background);
-  }
-  
-  .inactive {
-    opacity: 0.3;
-  }
-  
-  .userBox {
-    margin-top: auto;
-    padding: 10px;
-
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    border: 1px solid var(--border-gray);
-    border-radius: 12px;
-
-    font-family: 'Inter', sans-serif;
-  }
-  
-  .avatar {
-    width: 32px;
-    height: 32px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border-radius: 50%;
-
-    background: #000;
-    color: var(--background);
-    font-weight: bold;
-  }
-
-  .logoutButton{ 
-    min-width: 40px;
-    max-width: 40px;
-
-    padding: 8px var(--font-size-sm);
-    margin-left: auto; 
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-
-    border-radius: 50%;
-   
-    background-color: var(--background);
-    color: black;
-
-    cursor: pointer;
-  }
-  
-
-  
+.logoutButton{ 
+  min-width: 40px;
+  max-width: 40px;
+  padding: 8px var(--font-size-sm);
+  margin-left: auto; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 50%;
+  background-color: var(--background);
+  color: black;
+  cursor: pointer;
+}
