--- a/src/app/auth/authLayout.module.css
+++ b/src/app/auth/authLayout.module.css
@@ -9,14 +9,24 @@
     grid-template-columns: .9fr 1fr;
 }
 .layoutContainer > * {
+    height: 100%;
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 
-@media screen and (max-width: 800px) {
+@media (max-width: 1150px) {
     .layoutContainer {
-        grid-template-columns: 1fr 0;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
     }
+
+    .layoutContainer > *:not(:first-child) {
+        align-items: flex-start;
+        padding-top: 5vh;
+    }
+
 }
