--- a/src/app/auth/login/loginPage.module.css
+++ b/src/app/auth/login/loginPage.module.css
@@ -6,3 +6,15 @@
     flex-wrap: nowrap;
     gap: 10px;
 }
+
+@media (max-width: 1150px) {
+    .loginContainer {
+        gap: 8px;
+    }
+}
+
+@media (max-width: 680px) {
+    .loginContainer {
+        width: 326px;
+    }
+}
