--- a/src/lib/components/auth/authBannerContainer.module.css
+++ b/src/lib/components/auth/authBannerContainer.module.css
@@ -1,12 +1,52 @@
-.bannerContainer {
+
+
+.desktopWrapper {
+    width: 100%;
+    height: 100%;
+
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
 
     background-color: var(--foreground);
     
     color: #fff;
 }
+.tabletWrapper {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.mobileWrapper {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
 .bannerAppTitle {
     font-size: var(--font-size-lg);
+}
+
+@media (max-width: 1150px) {
+    .desktopWrapper {
+        display: none;
+    }
+    .tabletWrapper {
+        display: flex;
+    }
+}
+
+@media (max-width: 680px) {
+    .desktopWrapper {
+        display: none;
+    }
+    .tabletWrapper {
+        display: none;
+    }
+    .mobileWrapper {
+        display: flex;
+
+    }
 }
