--- a/src/app/home/homeLayout.module.css
+++ b/src/app/home/homeLayout.module.css
@@ -1,10 +1,9 @@
 
-
 .layoutContainer {
     width: 100vw;
     height: 100vh;
 
-    padding: 20px;
+    overflow: hidden;
 
     display: flex;
     flex-flow: row nowrap;
@@ -14,6 +13,6 @@
 .mainContainer {
     flex-grow: 1;
     
-    padding-top: 10px;
+    padding-top: 20px 0 0 0;
     
 }
