--- a/src/app/home/homeLayout.module.css
+++ b/src/app/home/homeLayout.module.css
@@ -4,6 +4,7 @@
     height: 100vh;
 
     overflow: hidden;
+    padding: 20px;
 
     display: flex;
     flex-flow: row nowrap;
@@ -13,6 +14,6 @@
 .mainContainer {
     flex-grow: 1;
     
-    padding-top: 20px 0 0 0;
+    padding: 10px 0 0 0;
     
 }
