#028 changed resendText color to fit design

--- a/src/app/auth/confirm-mail/confirmMail.module.css
+++ b/src/app/auth/confirm-mail/confirmMail.module.css
@@ -54,7 +54,7 @@
 
   font-size: var(--font-size-sm);
   line-height: 24px;
-  color: var(--foreground);
+  color: var(--text-gray);
 }
 
 .resendButton {
