--- a/src/app/auth/authLayout.module.css
+++ b/src/app/auth/authLayout.module.css
@@ -1,12 +1,12 @@
 
 .layoutContainer {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     
     margin: 0;
 
     display: grid;
-    grid-template-columns: .9fr 1fr;
+    grid-template-columns: 45% 55%;
 }
 .layoutContainer > * {
     height: 100%;
@@ -20,13 +20,13 @@
 
 @media (max-width: 1150px) {
     .layoutContainer {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-rows: auto auto;
     }
 
     .layoutContainer > *:not(:first-child) {
         align-items: flex-start;
-        padding-top: 5vh;
+        padding-top: 30px;
     }
 
 }
