--- a/src/app/auth/extra-data-required2/registerPage.module.css
+++ b/src/app/auth/extra-data-required2/registerPage.module.css
@@ -1,5 +1,8 @@
 .registerContainer 
 {
+    width: 600px;
+    margin: 0 20px;
+
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
