#026 migrate to form componentes; made responsive

--- a/src/app/auth/extra-data-required/registerPage.module.css
+++ b/src/app/auth/extra-data-required/registerPage.module.css
@@ -1,108 +1,10 @@
 .registerContainer 
 {
+    width: 600px;
+    margin: 0 20px;
+
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 28px;
-}
-
-.formLabel 
-{
-    font-size: var(--font-size-sm);
-}
-
-.formButton 
-{
-    width: 100%;
-
-    padding: 20px;
-    margin: 10px 0;
-
-    background-color: var(--foreground);
-    border: 1px solid var(--foreground);
-    outline: none;
-
-    font-size: var(--font-size-sm);
-    color: white;
-}
-
-.title 
-{
-    font-size: var(--font-size-lg);
-}
-
-.subtitle 
-{
-    font-size: var(--font-size-sm);
-    color: var(--text-gray);
-}
-
-.form 
-{
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-}
-
-.form > input 
-{
-    width: 100%;
-    height: 64px;
-
-    padding: 24px;
-
-    font-size: var(--font-size-sm);
-}
-
-.formGroup > input 
-{
-    width: 343px;
-    height: 64px;
-
-    padding: 24px;
-
-    font-size: var(--font-size-sm);
-}
-
-
-.formRow 
-{
-    display: flex;
-    flex-direction: row;
-    gap: 28px;
-}
-
-.formGroup 
-{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    flex: 1;
-}
-
-.form > input 
-{
-    width: 100%;
-    height: 64px;
-
-    padding: 24px;
-
-    font-size: var(--font-size-sm);
-}
-
-.formGroup > input 
-{
-    width: 343px;
-    height: 64px;
-
-    padding: 24px;
-
-    font-size: var(--font-size-sm);
-}
-
-.formHeaderContainer 
-{
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 10px;
 }
