--- a/src/lib/components/form/FormStyles.module.css
+++ b/src/lib/components/form/FormStyles.module.css
@@ -125,3 +125,9 @@
         gap: 0px;
     }
 }
+@media (max-width: 680px) {
+    .formInputErrorMessage {
+        height: fit-content;
+        min-height: 24px;
+    }
+}
