--- a/src/app/auth/confirm-mail/confirmMail.module.css
+++ b/src/app/auth/confirm-mail/confirmMail.module.css
@@ -1,5 +1,4 @@
 .container {
-  height: 421px;
   width: 480px;
 
   padding: 20px;
@@ -7,7 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
+  
+  gap: 20px;
 }
 
 .title {
