--- a/src/app/home/homeLayout.module.css
+++ b/src/app/home/homeLayout.module.css
@@ -1,7 +1,7 @@
 
 .layoutContainer {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
 
     overflow: hidden;
     padding: 20px;
@@ -42,7 +42,7 @@
         padding: 0;
     }
     .layoutContainer {
-        padding: 0px;
+        padding: 0px 0px 130px 0px;
         flex-direction: column;
         gap: 0px;
     }
