#044_Imbunatatire_landing_page_basic_design

--- a/src/app/home/components/MobileNavbar.module.css
+++ b/src/app/home/components/MobileNavbar.module.css
@@ -41,7 +41,11 @@
 @media (max-width: 1150px) {
     .container {
         display: flex;
-        height: 113px;
+        height: 87px;
+    }
+    .buttonWrapper {
+        width: 47px;
+        height: 47px;
     }
 } 
 
